<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/calculatorDisplay"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="right"
        android:maxLines="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:background="#ff86ffaa" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/calculatorDisplay"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:paddingTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sqrt_btn"
                android:layout_weight="0.2"
                android:id="@+id/sqrt_btn"
                android:onClick="sqrtOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sin_btn"
                android:layout_weight="0.2"
                android:id="@+id/sin_btn"
                android:onClick="sinOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cos_btn"
                android:layout_weight="0.2"
                android:id="@+id/cos_btn"
                android:onClick="cosOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tan_btn"
                android:layout_weight="0.2"
                android:id="@+id/tan_btn"
                android:onClick="tanOnClick"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/log_btn"
                android:layout_weight="0.2"
                android:id="@+id/log_btn"
                android:onClick="logOnClick"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:paddingTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/seven_btn"
                android:layout_weight="0.2"
                android:id="@+id/seven_btn"
                android:onClick="digitsOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/eight_btn"
                android:layout_weight="0.2"
                android:id="@+id/eight_btn"
                android:onClick="digitsOnClick" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/nine_btn"
                android:layout_weight="0.2"
                android:id="@+id/nine_btn"
                android:onClick="digitsOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/c_btn"
                android:layout_weight="0.2"
                android:id="@+id/c_btn"
                android:onClick="clear"
                android:background="#ffffb992" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ac_btn"
                android:layout_weight="0.2"
                android:id="@+id/ac_btn"
                android:onClick="clearAll"
                android:background="#ffffb991" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:paddingTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/four_btn"
                android:layout_weight="0.2"
                android:id="@+id/four_btn"
                android:onClick="digitsOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/five_btn"
                android:layout_weight="0.2"
                android:id="@+id/five_btn"
                android:onClick="digitsOnClick" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/six_btn"
                android:layout_weight="0.2"
                android:id="@+id/six_btn"
                android:onClick="digitsOnClick" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/multiply_btn"
                android:layout_weight="0.2"
                android:id="@+id/multiply_btn"
                android:onClick="operatorOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/divide_btn"
                android:layout_weight="0.2"
                android:id="@+id/divide_btn"
                android:onClick="operatorOnClick" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:paddingTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/one_btn"
                android:layout_weight="0.2"
                android:id="@+id/one_btn"
                android:onClick="digitsOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/two_btn"
                android:layout_weight="0.2"
                android:id="@+id/two_btn"
                android:onClick="digitsOnClick" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/three_btn"
                android:layout_weight="0.2"
                android:id="@+id/three_btn"
                android:onClick="digitsOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plus_btn"
                android:layout_weight="0.2"
                android:id="@+id/plus_btn"
                android:onClick="operatorOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/minus_btn"
                android:layout_weight="0.2"
                android:id="@+id/minus_btn"
                android:onClick="operatorOnClick" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1"
            android:paddingTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/zero_btn"
                android:layout_weight="0.2"
                android:id="@+id/zero_btn"
                android:onClick="digitsOnClick" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dot_btn"
                android:layout_weight="0.2"
                android:id="@+id/dot_btn"
                android:onClick="dotOnClick" />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/equal_btn"
                android:layout_weight="0.6"
                android:id="@+id/equal_btn"
                android:onClick="operatorOnClick" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
